--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,6 +8,8 @@ authors = ["seaung <seaung.c0m7de@protonmail.com>"]
 python = "^3.10"
 python-nmap = "^0.7.1"
 python3-nmap = "^1.5.1"
+PyMySQL = "^1.0.2"
+cryptography = "^37.0.2"
 
 [tool.poetry.dev-dependencies]
 
